-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.10.1
-
None
At https://doc.qt.io/qt-5.10/qml-qt3d-scene2d-scene2d.html is written that "import Qt3D.Scene2D 2.9" provides Scene2D, whereas it should be "import QtQuick.Scene2D 2.9"
- is duplicated by
-
QTBUG-69832 Scene3D documentation: wrong import statement
-
- Closed
-
| For Gerrit Dashboard: QTBUG-67370 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 235517,3 | Doc: Fix Scene2D and Scene3D QML modules uri | 5.11 | qt/qt3d | Status: MERGED | +2 | 0 |
| 235539,3 | Doc: Use correct module name | 5.11 | qt/qt3d | Status: MERGED | +2 | 0 |
| 235562,2 | Doc: Use correct module name | 5.9 | qt/qt3d | Status: MERGED | +2 | 0 |