Doc: Use correct module name

QML: Importing Qt3D.Scene2D doesn't work, QtQuick.Scene2D does.
CPP: Specify header file, as convenience header doesn't exist.

Task-number: QTBUG-67370
Change-Id: Ia53e92c076f52bbb81b91370425279c44bf9e3c5
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>